* I forgot to add NKJV.json in the previous update so that nobody was able to download that for offline 🙈🤦🏼‍♂️ [What a shame].  * As consequence I have updated HOW_TO_ADD_A_NEW_TRANSLATION.md  * I have added again gestures for opening the panels on mobile phones.  * fixed a bug of getParallelVerses API.  * I have updated the API docs. Now it is more clear, I have added a few more examples, made table of contents for faster navigation, added a section that tells you how to fetch a single verse(s) with example.

--- a/bolls/static/bolls/public/api.css
+++ b/bolls/static/bolls/public/api.css
@@ -118,7 +118,7 @@ a:hover {
 
 h1, h2, h3, h4, h5 {
   font-family: serif, sans-serif;
-  margin: 1em 0 0.35em;
+  margin: 4em 0 0.35em;
 }
 
 button {
